# ESP32S3_NES

./: .gitignore  CLAUDE.md  CLAUDE_WORKFLOW_README.md  CMakeLists.txt  README.rst  flashrom.sh  sdkconfig  sdkconfig.defaults
components/nofrendo/: CMakeLists.txt  noftypes.h
components/nofrendo-esp32/: CMakeLists.txt  Kconfig.projbuild  board_i2c.c  board_i2c.h  idf_component.yml  spi_lcd.c  spi_lcd.h  touch_controller.c  touch_controller.h  video_audio.c
components/nofrendo/nes/: nes_ppu.c
docs/: BOARD_REFERENCE.md  HARDWARE.md  JOURNAL.md
firmware-porting-kit/: PROMPT.md  README.md
firmware-porting-kit/boards/: ESP32-2432S028_BOARD_REFERENCE.md
firmware-porting-kit/templates/: CLAUDE.md
firmware-porting-kit/templates/docs/: BRINGUP.md  HARDWARE.md  JOURNAL.md
fw-porting-agents/: AGENTS.txt  ORCHESTRATOR_PROMPT.md  README.md  USAGE_GUIDE.md
main/: CMakeLists.txt  main.c
